# token_optimizer

./: .gitignore  Makefile  README.md  claude-gists.spec  pyproject.toml
.github/workflows/: release.yml
claude_gists/: __init__.py  __main__.py  app.py  cli.py  history.py  models.py  pricing.py  viewmodel.py
tests/: test_app.py  test_cli.py  test_dedup.py  test_history.py  test_pricing.py  test_viewmodel.py
tests/fixtures/sample-project/: session1.jsonl
tests/fixtures_dedup/dedup-project/: session.jsonl
