[project]
name = "claude-gists"
version = "0.1.0"
description = "A TUI for browsing recent Claude prompts and their token consumption from local history."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Guolin Liu" },
]
keywords = ["claude", "tui", "tokens", "cli", "textual", "llm", "usage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80",
]

[project.urls]
Homepage = "https://github.com/guolinliu/claude-gists"
Repository = "https://github.com/guolinliu/claude-gists"
Issues = "https://github.com/guolinliu/claude-gists/issues"

[project.scripts]
claude-gists = "claude_gists.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_gists"]

[tool.pytest.ini_options]
testpaths = ["tests"]
